--- a/CSC2611_lab_part_2.ipynb
+++ b/CSC2611_lab_part_2.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "import pickle\n",
     "\n",
+    "# the data needs to be manually downloaded to execute the code\n",
     "with open('data/data.pkl', 'rb') as f:\n",
     "    data = pickle.load(f)"
    ]
