--- a/CSC2611_exercise_and_lab_part_1.ipynb
+++ b/CSC2611_exercise_and_lab_part_1.ipynb
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2min 48s\n"
+      "Wall time: 2min 45s\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 20.2 s\n"
+      "Wall time: 25.8 s\n"
      ]
     }
    ],
@@ -391,9 +391,9 @@
      "text": [
       "Pearson’s correlation coefficient between humans and M1:\t 0.025 \tp-value: 0.84\n",
       "Pearson’s correlation coefficient between humans and M1_plus:\t 0.29 \tp-value: 0.018\n",
-      "Pearson’s correlation coefficient between humans and M2_10:\t 0.21 \tp-value: 0.09\n",
-      "Pearson’s correlation coefficient between humans and M2_100:\t 0.33 \tp-value: 0.0068\n",
-      "Pearson’s correlation coefficient between humans and M2_300:\t 0.36 \tp-value: 0.0037\n"
+      "Pearson’s correlation coefficient between humans and M2_10:\t 0.22 \tp-value: 0.081\n",
+      "Pearson’s correlation coefficient between humans and M2_100:\t 0.34 \tp-value: 0.0051\n",
+      "Pearson’s correlation coefficient between humans and M2_300:\t 0.37 \tp-value: 0.0026\n"
      ]
     }
    ],
@@ -437,14 +437,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3min 12s\n"
+      "Wall time: 3min 2s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "# load the pre-trained word2vec embeddings (the file is manually downloaded from the provided URL)\n",
+    "# load the pre-trained word2vec embeddings\n",
+    "# (to execute the code, the file needs to be manually downloaded from the provided URL)\n",
     "# takes 2-4 mins \n",
     "\n",
     "from gensim.models import KeyedVectors\n",
@@ -627,7 +628,7 @@
     "for k, v in anal_data_final.items():\n",
     "    category = \": \" + k + \"\\n\"\n",
     "    count += 1\n",
-    "    if count < 6:\n",
+    "    if count < 5:\n",
     "        FILE = sem_file\n",
     "    else:\n",
     "        FILE = syn_file\n",
@@ -650,7 +651,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 8min 11s\n"
+      "Wall time: 7min 46s\n"
      ]
     }
    ],
@@ -673,7 +674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3min 6s\n"
+      "Wall time: 2min 22s\n"
      ]
     }
    ],
@@ -737,7 +738,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 41min 24s\n"
+      "Wall time: 31min 13s\n"
      ]
     }
    ],
@@ -797,10 +798,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word2vec accuracy on the semantic analogy test: 0.46, 251 out of 162\n",
-      "Word2vec accuracy on the syntactic analogy test: 0.77, 1281 out of 2045\n",
-      "LSA(300d) accuracy on the semantic analogy test: 0.17, 28 out of 162\n",
-      "LSA(300d) accuracy on the syntactic analogy test: 0.053, 109 out of 2045\n"
+      "Word2vec accuracy on the semantic analogy test: 0.89, 144 out of 162\n",
+      "Word2vec accuracy on the syntactic analogy test: 0.68, 1388 out of 2045\n",
+      "LSA(300d) accuracy on the semantic analogy test: 0.19, 31 out of 162\n",
+      "LSA(300d) accuracy on the syntactic analogy test: 0.053, 108 out of 2045\n"
      ]
     }
    ],
