--- a/CSC2611_lab_part_2.ipynb
+++ b/CSC2611_lab_part_2.ipynb
@@ -669,7 +669,8 @@
     }
    ],
    "source": [
-    "# draw graphs with top 3 changing words: objectives radio film\n",
+    "# draw graphs with top 3 changing words: objectives radio film \n",
+    "# the number of neighbors can be changed; used 20 for the report \n",
     "\n",
     "changing_sequence_graph('objectives', 1000)\n",
     "changing_sequence_graph('radio', 1000)\n",
@@ -720,6 +721,7 @@
    ],
    "source": [
     "# draw graphs with top 3 stable words: december months days \n",
+    "# the number of neighbors can be changed; used 20 for the report \n",
     "\n",
     "changing_sequence_graph('december', 20)\n",
     "changing_sequence_graph('months', 20)\n",
